--- a/employee-login-backend2 (13)/employee-login-backend2 (6)/employee-login-backend2/src/main/resources/application.properties
+++ b/employee-login-backend2 (13)/employee-login-backend2 (6)/employee-login-backend2/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=employee-login-backend2
 server.port=8082
- 
-spring.datasource.url=jdbc:mysql://localhost:3306/employee_login_db
-spring.datasource.username=root
-spring.datasource.password=Laya@123
- 
+
+# AWS RDS Database Configuration
+spring.datasource.url=jdbc:mysql://employeelogindb.cloaikmk2yzx.ap-south-1.rds.amazonaws.com:3306/employee_login_db
+spring.datasource.username=admin
+spring.datasource.password=Xevyte2025
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=admin@xevyte.com
@@ -16,4 +18,3 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 server.error.include-message=always
 server.error.include-binding-errors=always
- 
